syntax = "proto3";

package mmg.public_api.v1;

import "mmg/model/v1/user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message SignInRequest {
}

message SignInResponse {
    model.v1.User user = 1;

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          required: ["user"]
        }
    };
}