syntax = "proto3";

package mmg.public_api.v1;

import "google/api/annotations.proto";
import "mmg/public_api/v1/tenant.proto";
import "mmg/public_api/v1/authentication.proto";

service PublicV1Service {
    rpc SignIn(SignInRequest) returns (SignInResponse) {
        option (google.api.http) = {
            post: "/v1/sign_in",
            body: "*"
        };
    }
    rpc GetTenant(GetTenantRequest) returns (GetTenantResponse) {
        option (google.api.http) = {
            get: "/v1/tenants/{tenant_id}"
        };
    }
}