syntax = "proto3";

package rapid.debug_api.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service DebugV1Service {
  rpc CreateStaffIDToken(CreateStaffIDTokenRequest) returns (CreateStaffIDTokenResponse) {
    option (google.api.http) = {
      post: "/debug/v1/staffs/-/id_token",
      body: "*"
    };
  }
}

message CreateStaffIDTokenRequest {
  string auth_uid = 1;
  string password = 2;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "auth_uid",
        "password"
      ]
    }
  };
}

message CreateStaffIDTokenResponse {
  string id_token = 1;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id_token"]
    }
  };
}
